se agrega logica para DI en detail movie

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="text_gallery">Galería</string>
     <string name="text_info_not_available">Información no disponible</string>
     <string name="not_results">No hay resultados para mostrar</string>
+    <string name="text_retry">Reintentar</string>
 
     <!-- error's messages -->
     <string name="text_not_allowed_error">Método no permitido</string>
